<resources>
    <string name="app_name">Project</string>
    <string name="facebook_app_id">1952416424861293</string>
    <string name="map_key" translatable="false">
      AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo
   </string>
    <string name="title_ListTour">List Tour</string>
    <string name="title_History">History</string>
    <string name="title_Explore">Explore</string>
    <string name="title_Notifications">Notifications</string>
    <string name="title_Setting">Setting</string>
    <string-array name="service_type">
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Super Market</item>
    </string-array>
    <string name="title_activity_detail__review">Detail_Review</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--Location tracking activity permission toasts-->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="access_token">pk.eyJ1IjoicGh1Y2FydXMxMTIiLCJhIjoiY2s0bWc3djZzMjFpcTNqcXhqajhwaHVpaCJ9.1jlzqoEuaKyhQ08NvmtmuQ</string>
</resources>
