<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/navigation_ListTour"
        android:icon="@drawable/homepage"
        android:title="@string/title_ListTour"/>
    <item android:id="@+id/navigation_History"
        android:icon="@drawable/history"
        android:title="@string/title_History"/>
    <item android:id="@+id/navigation_Explore"
        android:icon="@drawable/explore"
        android:title="@string/title_Explore"/>
    <item android:id="@+id/navigation_Notifications"
        android:icon="@drawable/notification"
        android:title="@string/title_Notifications"/>
    <item android:id="@+id/navigation_Setting"
        android:icon="@drawable/settings"
        android:title="@string/title_Setting"/>
</menu>